<resources>
    <string name="app_name">Party Calculator</string>

    <!-- Toolbar -->
    <string name="toolbar_popup">Popup menu</string>
    <string name="toolbar_popup_settings">Settings</string>
    <string name="toolbar_popup_instruction">How to use</string>
    <string name="toolbar_share">Share party</string>
    <string name="toolbar_copy_to_clipboard">Copy to clipboard</string>
    <string name="toolbar_copied">Party copied to clipboard</string>


    <!-- Session -->
    <string name="session_title">Parties</string>
    <string name="session_default_name">Party</string>
    <string name="add_session">Add party</string>
    <string name="no_sessions">(no parties)</string>
    <string name="session_removed">Party removed</string>
    <string name="all_sessions_removed">Parties removed</string>
    <string name="added_on">Added on</string>
    <string name="summary_sum">Sum</string>
    <string name="summary_done">Done</string>


    <!-- Products -->
    <string name="products_title">Categories</string>
    <string name="product_default">Something</string>
    <string name="add_product">Add category</string>
    <string name="product_removed">Category removed</string>
    <!-- Random titles -->
    <string name="product_random_0">Acid Apple</string>
    <string name="product_random_1">Big Banana</string>
    <string name="product_random_2">Candy Carrot</string>
    <string name="product_random_3">Double Donut</string>
    <string name="product_random_4">Easter Egg</string>
    <string name="product_random_5">Foggy Fish</string>
    <string name="product_random_6">Graceful Grape</string>
    <string name="product_random_7">Holy Hamburger</string>
    <string name="product_random_8">Icy Ice</string>
    <string name="product_random_9">Jelly Juice</string>
    <string name="product_random_10">Kind Kiwi</string>
    <string name="product_random_11">Loyal Lemon</string>
    <string name="product_random_12">Mighty Mushroom</string>
    <string name="product_random_13">Nervous Nectarine</string>
    <string name="product_random_14">Optimistic Onion</string>
    <string name="product_random_15">Pompous Pumpkin</string>
    <string name="product_random_16">Quick Quin</string>
    <string name="product_random_17">Rusty Radish</string>
    <string name="product_random_18">Smart Strawberry</string>
    <string name="product_random_19">Tactical Tomato</string>
    <string name="product_random_20">Unsure Ugli</string>
    <string name="product_random_21">Vulgar Vanilla</string>
    <string name="product_random_22">Wily Watermelon</string>
    <string name="product_random_23">X-treme Ximenia</string>
    <string name="product_random_24">Young Yam</string>
    <string name="product_random_25">Zero Zephyr</string>
    <string name="product_random_26">Something</string>
    <string name="product_random_27">Something</string>
    <string name="product_random_28">Something</string>
    <string name="product_random_29">Something</string>
    <string name="product_random_30">Something</string>
    <string name="product_random_31">Something</string>
    <string name="product_random_32">Something</string>


    <!-- Payers -->
    <string name="payers_title">Payers</string>
    <string name="payer_default">Somebody</string>
    <string name="add_payer">Add payer</string>
    <string name="payer_removed">Payer removed</string>
    <string name="check_stub">Category</string>
    <!-- Random names -->
    <string name="payer_random_0">Adria Arjona</string>
    <string name="payer_random_1">Benny Benassi</string>
    <string name="payer_random_2">Charlie Chaplin</string>
    <string name="payer_random_3">Dean DeBlois</string>
    <string name="payer_random_4">Earl Emerson</string>
    <string name="payer_random_5">Freddy Freeman</string>
    <string name="payer_random_6">Gillian Gilbert</string>
    <string name="payer_random_7">Harry Houdini</string>
    <string name="payer_random_8">Ivan Illich</string>
    <string name="payer_random_9">Johnny Jewel</string>
    <string name="payer_random_10">Kate Kane</string>
    <string name="payer_random_11">Louis Lumière</string>
    <string name="payer_random_12">Michael Myers</string>
    <string name="payer_random_13">Nicholas Nickleby</string>
    <string name="payer_random_14">Otto Octavius</string>
    <string name="payer_random_15">Peter Pan</string>
    <string name="payer_random_16">Quentin Quire</string>
    <string name="payer_random_17">Ryan Reynolds</string>
    <string name="payer_random_18">Sam Sparks</string>
    <string name="payer_random_19">Tina Turner</string>
    <string name="payer_random_20">Utane Uta</string>
    <string name="payer_random_21">Vincent Vega</string>
    <string name="payer_random_22">Walter White</string>
    <string name="payer_random_23">Xue Xuan</string>
    <string name="payer_random_24">Yin Yang</string>
    <string name="payer_random_25">Zoë Zebra</string>
    <string name="payer_random_26">Somebody</string>
    <string name="payer_random_27">Somebody</string>
    <string name="payer_random_28">Somebody</string>
    <string name="payer_random_29">Somebody</string>
    <string name="payer_random_30">Somebody</string>
    <string name="payer_random_31">Somebody</string>
    <string name="payer_random_32">Somebody</string>


    <!-- Results -->
    <string name="results_title">Results</string>
    <string name="no_results">No results</string>
    <string name="nothing_to_calculate">Nothing to calculate</string>
    <string name="no_debts">No debts</string>
    <string name="results_payers_alert">Sums must match</string>

    <string name="result_1_product">category for</string>
    <string name="result_2_3_4_products">categories for</string>
    <string name="result_products">categories for</string>

    <string name="result_1_payer">payer for</string>
    <string name="result_2_3_4_payers">payers for</string>
    <string name="result_payers">payers for</string>


    <!-- Prefs -->
    <string name="title_activity_settings">Settings</string>
    <!-- Share -->
    <string name="share_header">Share</string>
    <string name="share_summary">What section must be attached except results</string>
    <string name="attach_products">Categories</string>
    <string name="attach_payers">Payers</string>
    <!-- Calculate -->
    <string name="calc_header">Adding items</string>
    <string name="check_default">Switch on category checks</string>
    <string name="check_default_summary">Set categories checked when added</string>
    <!-- Display -->
    <string name="display_header">Display</string>
    <string name="show_title_hints">Generate titles</string>
    <string name="show_title_hints_summary">At name and category title fields</string>
    <string name="show_sum_hints">Generate expressions</string>
    <string name="show_sum_hints_summary">At sum field</string>


    <!-- Easter -->
    <string name="easter_one">Nice. What\'s next?</string>
    <string name="easter_both">Check How to use page</string>
    <string name="easter">8. Check this: 41.84201, -89.485937</string>


    <!-- How to use -->
    <string name="instruction_title">How to use</string>
    <string name="instruction_header">PartyCalc will help you to calculate debts after party. For this:</string>
    <string name="instruction_1">1. Add party with plus button</string>
    <string name="instruction_2">2. Add categories and enter their costs</string>
    <string name="instruction_3">3. Add payers, their spending and categories they consumed, wherein sums of categories and payers must match</string>
    <string name="instruction_4">4. Enter expressions right at sum fields</string>
    <string name="instruction_5">5. App will calculate debts</string>
    <string name="instruction_6">6. Set debts as done with checkbox</string>
    <string name="instruction_7">7. Share results with share button</string>


    <!-- Misc -->
    <string name="sum_default">100+200</string>
    <string name="equals_default">= 0</string>
    <string name="undo">Undo</string>
    <string name="arrow_description">to</string>
    <string name="reorder_description">reorder</string>
    <string name="expand_description">expand</string>

</resources>
