<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/share_header" app:summary="@string/share_summary">

        <CheckBoxPreference
            app:key="share_include_products"
            app:defaultValue="false"
            app:title="@string/attach_products" />

        <CheckBoxPreference
            app:key="share_include_payers"
            app:defaultValue="false"
            app:title="@string/attach_payers" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/calc_header">

        <CheckBoxPreference
            app:key="payer_check_default_state"
            app:defaultValue="true"
            app:title="@string/check_default"
            app:summary="@string/check_default_summary"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_header">

        <CheckBoxPreference
            app:key="show_title_hints"
            app:defaultValue="true"
            app:summary="@string/show_title_hints_summary"
            app:title="@string/show_title_hints" />

        <CheckBoxPreference
            app:key="show_sum_hints"
            app:defaultValue="true"
            app:summary="@string/show_sum_hints_summary"
            app:title="@string/show_sum_hints" />

    </PreferenceCategory>

</PreferenceScreen>
