<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="name.marinchenko.partycalc.android.activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products_title"
            android:layout_margin="16dp"
            android:textSize="14sp"
            />

        <ListView
            android:id="@+id/list_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <ImageButton
            android:id="@+id/add_product_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_add_green_24dp"
            android:contentDescription="@string/add_product"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payers_title"
            android:layout_margin="16dp"
            android:textSize="14sp"
            />

        <ListView
            android:id="@+id/list_payers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <ImageButton
            android:id="@+id/add_payer_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_add_green_24dp"
            android:contentDescription="@string/add_payer"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results_title"
            android:layout_margin="16dp"
            android:textSize="14sp"
            />

        <ListView
            android:id="@+id/list_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>


</ScrollView>



